required changes for users to migrate from one version of MITAB to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the CVS log comments.


CHANGES - Current Version:
--------------------------

- Added support for v9.x Time and DateTime fields (based on patch from
  AJD, bug 1754)

- Added bounds for Peruvian coordinate systems PSAD56 in mitab_bounds.cpp
  (came with patch from AJD sent for bug 1754)


Version 1.6.4 (2007-12-10)
--------------------------

- Upgrade of OGR and CPL libs to the version from GDAL/OGR 1.4.3

- Fixed leak of SRS in OGRGeometry (bug 1816)

- Fix asDatumInfoList[] and asSpheroidInfoList[] defns/refs (bug 1826)

- Added reporting access mode to error message in TABINDFile::Open()
  (GDAL changeset r12460, ticket 1620)

- Fixed leaks in ITABFeature???::Set???FromStyleString() (GDAL ticket 1696)


Version 1.6.3 (2007-10-12)
--------------------------

- Remove static variables that interfere with reentrancy. 
  http://trac.osgeo.org/gdal/ticket/1883


Version 1.6.3-beta2 (2007-09-18)
--------------------------------

- Fixed another issue related to splitting of object blocks with the 
  optimized spatial index. The compressed coordinate origin values were
  not initialized properly before being written (bug 1732)


Version 1.6.3-beta1 (2007-09-14)
--------------------------------

- Fixed the splitting of object blocks with the optimized spatial
  index mode that was producing files with misaligned bytes that
  confused MapInfo (bug 1732)
  Note that even if this bug is (hopefully) fixed, the optimized spatial
  index is still disabled by default in this release and we still use
  the quick (i.e. traditional) spatial index mode by default.

- Fixed problem with MIF parser being confused by special attribute 
  names (bug 1795)


Version 1.6.2 (2007-07-12)